abstract/beginning of synopsis

--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Movie Madness</title>
+</head>
+
+<body>
+<main>
+<div class="header">
+	<h1>Movie Madness</h1>	
+</div>
+<div class="abstract">
+	<h2>Abstract</h2>
+	<p>Title: Movie Madness</p>
+	<p>Northwestern University, EECS 349</p>
+	<p>Members:</p>
+	<ul class="members">
+		<li>Qiang Bi</li>
+		<li>Sameena Khan</li>
+		<li>Richie Lee</li>
+		<li>Sarah Wong</li>
+		<li>Nancy Yao</li>
+	</ul>
+	<p>Contact: <a href="mailto:qiangbi2019@u.northwestern.edu">qiangbi2019@u.northwestern.edu</a></p>
+	<div class="synopsis">
+	<p>Picture this - you’re an executive at the world’s leading movie production company. You’re in the conference room and have just heard hundreds of pitches for a new thriller. Your task? Choose the one that will be the most talked-about blockbuster of the summer. (No pressure.) You have all the information - from which actors will be cast to the size of the budget, and even a good grasp on potential critic ratings based on similar movies. Now what?</p>
+	<p>Considering that screenwriters, directors, and film companies need to stay ahead of the trends in the movie business, we set out to find a way to predict the box office revenue of movies in the United States. We focused on attributes such as the production budget, popularity of actors and directors, and reviews. We classified gross revenue in four categories, based on the distribution of our data. We used the IMDB 5000 dataset from Kaggle, choosing from its 28 attributes to find the ones most indicative of movie success. </p>
+	<p>We tried a variety of machine learning algorithms: decision trees, k-nearest neighbor, multilayer perceptrons, Bayes Net, and linear regression. We compared each of these to ZeroR and iterated on different combinations of our data to find the optimal learner for our task. </p>
+	</div>
+
+</div>
+</main>
+</body>
