--- a/index.html
+++ b/index.html
@@ -2,17 +2,24 @@
 <html>
 <head>
 	<title>Movie Madness</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Kumar+One|Lato" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Hammersmith+One" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
 </head>
 
 <body>
 <main>
+<!--Stars-->
+<div id="stars1"></div>
+<div id="stars2"></div>
+<div id="stars3"></div>
 <div class="header">
 	<h1>Movie Madness</h1>	
+	<p>Northwestern University EECS 349, Spring 2017</p>
 </div>
 <div class="abstract">
 	<h2>Abstract</h2>
-	<p>Title: Movie Madness</p>
-	<p>Northwestern University, EECS 349</p>
 	<p>Members:</p>
 	<ul class="members">
 		<li>Qiang Bi</li>
