--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Kumar+One|Lato" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Hammersmith+One" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Limelight" rel="stylesheet">
 </head>
 
 <body>
@@ -16,10 +17,21 @@
 <div id="stars3"></div>
 <div class="header">
 	<h1>Movie Madness</h1>	
-	<p>Northwestern University EECS 349, Spring 2017</p>
 </div>
+<br>
+<br>
+<div class="menu">
+	<a class="menuItem" href=#abstract>Abstract</a>
+	<a class="menuItem" href=#intro>Intro</a>
+	<a class="menuItem" href=#learners>Learners</a>
+	<a class="menuItem" href=#results>Results</a>
+	<a class="menuItem" href=#downloads>Downloads</a>
+</div>
+<hr>
+<br>
 <div class="abstract">
 	<h2>Abstract</h2>
+	<p>Northwestern University EECS 349, Spring 2017</p>
 	<p>Members:</p>
 	<ul class="members">
 		<li>Qiang Bi</li>
