--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div id="stars2"></div>
 <div id="stars3"></div>
 <div class="header">
-	<h1>MOVIE MADNESS</h1>	
+	<h1>MOVIE MADNESS</h1>
 </div>
 <br>
 <br>
@@ -63,14 +63,17 @@
 <div id="downloads" class="mainclass">
 	<a class="totop" href="#content">Back to top</a>
 	<h2>Downloads</h2>
-	<a class="downloads" href="dataset/train_beforelikes.csv">Training data with old Facebook likes</a>
+	<a class="downloads">Final Report Write-Up</a>
 	<br><br><br>
-	<a class="downloads" href="dataset/train_afterlikes.csv">Training data with new Facebook likes (30%)</a>
+	<a class="downloads" href="dataset/train_beforelikes.csv">Original Training Data</a>
 	<br><br><br>
-	<a class="downloads" href="dataset/test_afterlikes.csv">Test data with old Facebook likes (70%)</a>
+	<a class="downloads" href="dataset/train_afterlikes.csv">New Training Data (70%)</a>
 	<br><br><br>
-	<a class="downloads">Script for scraping Facebook likes???</a>
+	<a class="downloads" href="dataset/test_afterlikes.csv">New Testing Data (30%)</a>
 	<br><br><br>
+	<a class="downloads">Facebook Likes Scraper</a>
+	<br><br><br>
+
 </div>
 </main>
 <div>
